errors.log
2023-07-01 12:52:15,282 -- ERROR -- Internal Server Error: /news/ --> D:\Users\Кирилл\PycharmProjects\NewsPortalProject\newsvenv\Lib\site-packages\django\utils\log.py *** (<class 'django.template.exceptions.TemplateSyntaxError'>, TemplateSyntaxError("Invalid block tag on line 91: 'endblock', expected 'endblock' or 'endblock conten'. Did you forget to register or load this tag?"), <traceback object at 0x000001F01B982600>)
Traceback (most recent call last):
  File "D:\Users\Кирилл\PycharmProjects\NewsPortalProject\newsvenv\Lib\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
               ^^^^^^^^^^^^^^^^^^^^^
  File "D:\Users\Кирилл\PycharmProjects\NewsPortalProject\newsvenv\Lib\site-packages\django\core\handlers\base.py", line 220, in _get_response
    response = response.render()
               ^^^^^^^^^^^^^^^^^
  File "D:\Users\Кирилл\PycharmProjects\NewsPortalProject\newsvenv\Lib\site-packages\django\template\response.py", line 111, in render
    self.content = self.rendered_content
                   ^^^^^^^^^^^^^^^^^^^^^
  File "D:\Users\Кирилл\PycharmProjects\NewsPortalProject\newsvenv\Lib\site-packages\django\template\response.py", line 87, in rendered_content
    template = self.resolve_template(self.template_name)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\Users\Кирилл\PycharmProjects\NewsPortalProject\newsvenv\Lib\site-packages\django\template\response.py", line 69, in resolve_template
    return select_template(template, using=self.using)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\Users\Кирилл\PycharmProjects\NewsPortalProject\newsvenv\Lib\site-packages\django\template\loader.py", line 42, in select_template
    return engine.get_template(template_name)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\Users\Кирилл\PycharmProjects\NewsPortalProject\newsvenv\Lib\site-packages\django\template\backends\django.py", line 33, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\Users\Кирилл\PycharmProjects\NewsPortalProject\newsvenv\Lib\site-packages\django\template\engine.py", line 175, in get_template
    template, origin = self.find_template(template_name)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\Users\Кирилл\PycharmProjects\NewsPortalProject\newsvenv\Lib\site-packages\django\template\engine.py", line 157, in find_template
    template = loader.get_template(name, skip=skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\Users\Кирилл\PycharmProjects\NewsPortalProject\newsvenv\Lib\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\Users\Кирилл\PycharmProjects\NewsPortalProject\newsvenv\Lib\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
           ^^^^^^^^^
  File "D:\Users\Кирилл\PycharmProjects\NewsPortalProject\newsvenv\Lib\site-packages\django\template\base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\Users\Кирилл\PycharmProjects\NewsPortalProject\newsvenv\Lib\site-packages\django\template\base.py", line 200, in compile_nodelist
    return parser.parse()
           ^^^^^^^^^^^^^^
  File "D:\Users\Кирилл\PycharmProjects\NewsPortalProject\newsvenv\Lib\site-packages\django\template\base.py", line 513, in parse
    raise self.error(token, e)
  File "D:\Users\Кирилл\PycharmProjects\NewsPortalProject\newsvenv\Lib\site-packages\django\template\base.py", line 511, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\Users\Кирилл\PycharmProjects\NewsPortalProject\newsvenv\Lib\site-packages\django\template\loader_tags.py", line 293, in do_extends
    nodelist = parser.parse()
               ^^^^^^^^^^^^^^
  File "D:\Users\Кирилл\PycharmProjects\NewsPortalProject\newsvenv\Lib\site-packages\django\template\base.py", line 513, in parse
    raise self.error(token, e)
  File "D:\Users\Кирилл\PycharmProjects\NewsPortalProject\newsvenv\Lib\site-packages\django\template\base.py", line 511, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "D:\Users\Кирилл\PycharmProjects\NewsPortalProject\newsvenv\Lib\site-packages\django\template\loader_tags.py", line 238, in do_block
    parser.invalid_block_tag(endblock, "endblock", acceptable_endblocks)
  File "D:\Users\Кирилл\PycharmProjects\NewsPortalProject\newsvenv\Lib\site-packages\django\template\base.py", line 558, in invalid_block_tag
    raise self.error(
django.template.exceptions.TemplateSyntaxError: Invalid block tag on line 91: 'endblock', expected 'endblock' or 'endblock conten'. Did you forget to register or load this tag?
2023-07-01 12:52:15,295 -- ERROR -- "GET /news/ HTTP/1.1" 500 181000 --> D:\Users\Кирилл\PycharmProjects\NewsPortalProject\newsvenv\Lib\site-packages\django\core\servers\basehttp.py *** None
